This addresses the following issues:
- It takes away the white background shown when link is focused. Notable 
in the course catalog. Closes #217

- Darken the background in the login page by 35% to make the white text 
easier to read, and it adds margin to the top logo so it doesn't look 
like it's budding up against the top of the browser. Closes #214

--- a/scss/saylor/_coursecatalog.scss
+++ b/scss/saylor/_coursecatalog.scss
@@ -31,3 +31,8 @@
  float: none;
  padding-top: 6px;
 }
+
+.coursename > .aalink:focus {
+  outline: inherit;
+  background-color: inherit;
+}
